--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <h1>Project 1</h1>
             <h2>Blog</h2>
             <p>I borrowed most of the templates from bootstrap and mapped the urls and added
-               and authentication system to verify users giving them access to their dashboard...
-               I'm yet to update the dashboard, but it's an upcoming task. And i added a restapi to this project too...........The<a href="https://github.com/RexDavid06/authentication_system" style="color: black;" target="_blank"> link </a>this project</p>
+               an authentication system to verify users giving them access to their dashboard...
+               I'm yet to update the dashboard, but it's an upcoming task. And i added a restapi to this project too...........The<a href="https://github.com/RexDavid06/authentication_system" style="color: black;" target="_blank"> link </a>to this project</p>
                
           </div>
           <div class="project-img">
