added one more skill

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           My overall goal is to solve complex problems, optimizing performance and ensuring seamless user experiences.
           <h1 class="section-title"><small>SKILLS</small><span></span></h1>
           <div>
-            <h3>PYTHON | DJANGO | RESTAPI | HTML | CSS | SQLITE</h3>
+            <h3>PYTHON | DJANGO | RESTAPI | HTML | CSS | SQLITE | GIT</h3>
           </div>
            
         </p>
