updated for wrong routing

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="project-info">
             <h1>Project 2</h1>
             <h2>A RESTAPI</h2>
-            <p>I built an API that has an efficient CRUD functionality........ The<a href="https://github.com/RexDavid06/my_recent_projects" style="color: black;" target="_blank"> link </a>to this project</p>
+            <p>I built an API that has an efficient CRUD functionality........ The<a href="https://github.com/RexDavid06/CRUD_api" style="color: black;" target="_blank"> link </a>to this project</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
