--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="project-info">
             <h1>Project 4</h1>
             <h2>Coding is Pain</h2>
-            <p>Upcoming...............</p>
+            <p>Upcoming..............</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
@@ -142,7 +142,7 @@
           <div class="project-info">
             <h1>Project 5</h1>
             <h2>Coding is Fun</h2>
-            <p>Upcoming.................</p>
+            <p>Upcoming................</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
