added a new project

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>My Website</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -121,8 +122,8 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Project 3</h1>
-            <h2>Coding is Love</h2>
-            <p>Upcoming.................</p>
+            <h2>A To-Do Application</h2>
+            <p>This application firstly, has an authentication and restriction system that helps for proper functionalites for our users, like logged in users not been able to view the register and login pages, unregistered users not been able to have access to any other page except the login , signup and index page.....The <a href="https://github.com/RexDavid06/Todo_App"style='color:black' target="_blank">link</a> to this project</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
