--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h2>Blog</h2>
             <p>I borrowed most of the templates from bootstrap and mapped the urls and added
                an authentication system to verify users giving them access to their dashboard...
-               I'm yet to update the dashboard, but it's an upcoming task. And i added a restapi to this project too...........The<a href="https://github.com/RexDavid06/authentication_system" style="color: black;" target="_blank"> link </a>to this project</p>
+               I'm yet to update the dashboard, but it's an upcoming task. And i added a restapi to this project too...........The<a href="https://github.com/RexDavid06/authentication_system" target="_blank"> link </a>to this project</p>
                
           </div>
           <div class="project-img">
@@ -113,7 +113,7 @@
           <div class="project-info">
             <h1>Project 2</h1>
             <h2>A RESTAPI</h2>
-            <p>I built an API that has an efficient CRUD functionality........ The<a href="https://github.com/RexDavid06/CRUD_api" style="color: black;" target="_blank"> link </a>to this project</p>
+            <p>I built an API that has an efficient CRUD functionality........ The<a href="https://github.com/RexDavid06/CRUD_api" target="_blank"> link </a>to this project</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
@@ -123,7 +123,9 @@
           <div class="project-info">
             <h1>Project 3</h1>
             <h2>A To-Do Application</h2>
-            <p>This application firstly, has an authentication and restriction system that helps for proper functionalites for our users, like logged in users not been able to view the register and login pages, unregistered users not been able to have access to any other page except the login , signup and index page.....The <a href="https://github.com/RexDavid06/Todo_App"style='color:black' target="_blank">link</a> to this project</p>
+            <p>This application firstly, has an authentication and restriction system that helps for proper functionalites for our users, 
+              like logged in users not been able to view the register and login pages, unregistered users not been able to have access to 
+              any other page except the login , signup and index page.....The <a href="https://github.com/RexDavid06/Todo_App" target="_blank">link</a> to this project</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
@@ -132,8 +134,9 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Project 4</h1>
-            <h2>Coding is Pain</h2>
-            <p>Upcoming..............</p>
+            <h2>A Blog Application</h2>
+            <p>This application has an effient authentication system also giving the user ability to make, edit and delete their post.
+              A user dont' have access to update or delete another users post...The <a href="https://github.com/RexDavid06/blog-application" target="_blank" >link</a> to this project  </p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
