--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Project 1</h1>
-            <h2>Blog</h2>
-            <p>I borrowed most of the templates from bootstrap and mapped the urls and added
+            <h2>Authentication System</h2>
+            <p>I borrowed most of the templates from bootstrap, did URL mapping and added
                an authentication system to verify users giving them access to their dashboard...
-               I'm yet to update the dashboard, but it's an upcoming task. And i added a restapi to this project too...........The<a href="https://github.com/RexDavid06/authentication_system" target="_blank"> link </a>to this project</p>
+               I'm yet to update the dashboard, but it's an upcoming task. And i added a restapi to this project too...........The<a href="https://github.com/RexDavid06/authentication_system" target="_blank"> link </a>to this project in github</p>
                
           </div>
           <div class="project-img">
@@ -114,7 +114,7 @@
           <div class="project-info">
             <h1>Project 2</h1>
             <h2>A RESTAPI</h2>
-            <p>I built an API that has an efficient CRUD functionality........ The<a href="https://github.com/RexDavid06/CRUD_api" target="_blank"> link </a>to this project</p>
+            <p>I built an API that has an efficient CRUD functionality........ The<a href="https://github.com/RexDavid06/CRUD_api" target="_blank"> link </a>to this project in github</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
@@ -126,7 +126,7 @@
             <h2>A To-Do Application</h2>
             <p>This application firstly, has an authentication and restriction system that helps for proper functionalites for our users, 
               like logged in users not been able to view the register and login pages, unregistered users not been able to have access to 
-              any other page except the login , signup and index page.....The <a href="https://github.com/RexDavid06/Todo_App" target="_blank">link</a> to this project</p>
+              any other page except the login , signup and index page.....The <a href="https://github.com/RexDavid06/Todo_App" target="_blank">link</a> to this project in github</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
@@ -137,7 +137,7 @@
             <h1>Project 4</h1>
             <h2>A Blog Application</h2>
             <p>This application has an effient authentication system also giving the user ability to make, edit and delete their post.
-              A user dont' have access to update or delete another users post...The <a href="https://github.com/RexDavid06/blog-application" target="_blank" >link</a> to this project  </p>
+              A user dont' have access to update or delete another users post...The <a href="https://github.com/RexDavid06/blog-application" target="_blank" >link</a> to this project in github </p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
@@ -169,7 +169,7 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Back End Developer</h2>
-        <p>Hi, I'm  Buchi Rex-David, a passionate and experienced Backend Developer
+        <p>Hi, I'm  Buchi Rex-David. I hold a degree in Mechanical Engineering from Madonna University, Akpugo Campus, Nigeria. I am a Backend Developer
           with a drive to create scalable, efficient and secure server-side applications.
           My overall goal is to solve complex problems, optimizing performance and ensuring seamless user experiences.
           <h1 class="section-title"><small>STACKS</small><span></span></h1>
